Improvement of the Home feature and add searchVehicle Form

--- a/src/app/public/home/home-carousel/home-banner/home-banner.component.html
+++ b/src/app/public/home/home-carousel/home-banner/home-banner.component.html
@@ -1,17 +1,9 @@
 <div>
-  <div class="text-center text-black">
+  <div class="text-center">
       <h1 class="display-2 font-weight-bold">e-Motion</h1>
       <h2 class="display-3 font-weight-bold">N°1 des sites de location de vehicules électriques</h2>
-      <p class="h4 font-weight-light">
-          Choisissez une date et un type de véhicule :
-      </p>
-      <p class="h4 font-weight-light">
-          calendrier / selectTypeVehicule
-      </p>
-      <p class="h4 font-weight-light">
-          <a class="btn btn-success btn-lg" href="#" role="button" routerLink="#">
-              <strong>Lancer la recherche</strong>
-          </a>
-      </p>
+        <div class="pt-5 pb-4">
+            <app-home-location-form></app-home-location-form>
+        </div>
   </div>
 </div>
