fix category and useless state

--- a/src/app/protected/manage/manage-vehicles/manage-vehicle-add/vehicle-add/vehicle-add.component.html
+++ b/src/app/protected/manage/manage-vehicles/manage-vehicle-add/vehicle-add/vehicle-add.component.html
@@ -27,13 +27,13 @@
                   <div class="form-group col-lg-2" id="divInit" style="border-left:1px solid rgba(0, 0, 0, 0.1)">
                       <label class="control-label required" for="type"><u>Type</u> :</label>
                       <select class="form-control" id="type" name="type" style="text-align:center" ngModel required>
-                        <option>VOITURE</option>
+                        <option>CAR</option>
                         <option>SCOOTER</option>
                       </select>
                   </div>
                   <div class="form-group col-lg-2" id="divInit" style="border-left:1px solid rgba(0, 0, 0, 0.1)">
                       <label class="control-label required" for="category"><u>Catégorie</u> :</label>
-                      <input style="text-align:center" type="text" id="category" name="caterogy" class="form-control" placeholder="Catégorie du véhicule" ngModel required>
+                      <input style="text-align:center" type="text" id="category" name="category" class="form-control" placeholder="Catégorie du véhicule" ngModel required>
                   </div>
                   <div class="form-group col-lg-2" id="divInit" style="border-left:1px solid rgba(0, 0, 0, 0.1)">
                       <label class="control-label required" for="color"><u>Couleur</u> :</label>
@@ -87,10 +87,6 @@
                     <div class="form-group col-lg-2" id="divInit" style="border-left:1px solid rgba(0, 0, 0, 0.1)">
                         <label class="control-label required" for="kilometers"><u>Kilometres</u> :</label>
                         <input style="text-align:center" type="text" id="kilometers" name="kilometers" class="form-control" placeholder="Compteur kilométrique du véhicule" ngModel required>
-                    </div>
-                    <div class="form-group col-lg-2" id="divInit" style="border-left:1px solid rgba(0, 0, 0, 0.1)">
-                        <label class="control-label required" for="state"><u>Etat</u> :</label>
-                        <input style="text-align:center" type="text" id="state" name="state" class="form-control" placeholder="Etat du véhicule" ngModel required>
                     </div>
                     <div class="col col-lg-2"></div>
                 </div>
