--- a/src/app/public/home/home-carousel/home-carousel.component.html
+++ b/src/app/public/home/home-carousel/home-carousel.component.html
@@ -1,20 +1,20 @@
 <div id="carouselFade" class="carousel slide carousel-fade" data-ride="carousel">
   <div class="carousel-inner">
       <div class="carousel-item active">
-          <img src="https://mdbootstrap.com/img/Photos/Slides/img%20(15).jpg" class="d-block w-100" alt="First slide">
+          <img src="https://blog.vivacar.fr/wp-content/uploads/2018/03/voiture-%C3%A9lectrique-occasion-inside.jpg" class="d-block w-100" alt="First slide">
           <div class="overlay"></div>
           <div class="carousel-caption d-none d-md-block">
               <app-home-banner></app-home-banner>
           </div>
       </div>
       <div class="carousel-item">
-          <img src="https://mdbootstrap.com/img/Photos/Slides/img%20(16).jpg" class="d-block w-100" alt="Second slide">
+          <img src="https://www.autoscout24.de/cms-content-assets/43cBweznPVD1miMGL5eCMf-a993c06c9426e51632a09fcba0123dea-Renault-Zoe-2020-1280-02-1100.jpg" class="d-block w-100" alt="Second slide">
           <div class="carousel-caption d-none d-md-block">
               <app-home-banner></app-home-banner>
           </div>
       </div>
       <div class="carousel-item">
-          <img src="https://mdbootstrap.com/img/Photos/Slides/img%20(17).jpg" class="d-block w-100" alt="Third slide">
+          <img src="https://cdn.motor1.com/images/mgl/zokE6/s4/opel-corsa-e-lead.jpg" class="d-block w-100" alt="Third slide">
           <div class="carousel-caption d-none d-md-block">
               <app-home-banner></app-home-banner>
           </div>
