--- a/src/app/public/home/home.component.html
+++ b/src/app/public/home/home.component.html
@@ -1,1 +1,4 @@
 <app-home-carousel></app-home-carousel>
+<div class="pt-5 pb-4">
+        <app-home-location-form></app-home-location-form>
+    </div>
