--- a/src/app/public/home/home-carousel/home-banner/home-banner.component.html
+++ b/src/app/public/home/home-carousel/home-banner/home-banner.component.html
@@ -1,9 +1,7 @@
 <div>
   <div class="text-center">
       <h1 class="display-2 font-weight-bold">e-Motion</h1>
-      <h2 class="display-3 font-weight-bold">N°1 des sites de location de vehicules électriques</h2>
-        <div class="pt-5 pb-4">
-            <app-home-location-form></app-home-location-form>
-        </div>
+      <h2 >N°1 des sites de location</h2>    
   </div>
+
 </div>
