--- a/src/app/public/home/home-carousel/home-location-form/home-location-form.component.html
+++ b/src/app/public/home/home-carousel/home-location-form/home-location-form.component.html
@@ -6,7 +6,7 @@
       <form #searchForm="ngForm" (ngSubmit)="SearchLocation(searchForm.value)">
         <div class="card-body">
             <div class="column text-center">
-              <div class="row text-white">
+              <div class="row text-green">
                 <div class="col-3"><label class="control-label" for="startDate"><u id="startDate">Date de début</u> :</label></div>
                 <div class="col-3"><label class="control-label" for="endDate"><u id="endDate">Heure de début</u> :</label></div>
                 <div class="col-3"><label class="control-label" for="startTime"><u id="startTime">Date de fin</u> :</label></div>
