--- a/src/app/public/home/home.component.html
+++ b/src/app/public/home/home.component.html
@@ -2,3 +2,4 @@
 <div class="pt-5 pb-4">
         <app-home-location-form></app-home-location-form>
     </div>
+<app-available-vehicles></app-available-vehicles>
