improvement of the behavior Subject now we observe the user not the loginResponse & refactoring and improving home

--- a/src/app/protected/manage/manage-vehicles/vehicle-details/vehicle-details.component.html
+++ b/src/app/protected/manage/manage-vehicles/vehicle-details/vehicle-details.component.html
@@ -21,7 +21,7 @@
             <div class="col-5"><label class="control-label" for="type"><u>Type</u> :</label></div>
             <div class="col-7">
               <select [value]="vehicle.type" type="text" id="type" name="type" [ngModel]="vehicle.type" required style="width:96%;padding: inherit;">
-                <option>VOITURE</option>
+                <option>CAR</option>
                 <option>SCOOTER</option>
               </select>
             </div>
