--- a/src/app/protected/user/user.component.html
+++ b/src/app/protected/user/user.component.html
@@ -24,6 +24,6 @@
 <div class="container-fluid">
   <div class="justify-content-center mr-3 ml3 pr-3 pl-3">
       <router-outlet></router-outlet>
-  </div>x
+  </div>
 </div>
 
