--- a/src/app/public/home/home.component.html
+++ b/src/app/public/home/home.component.html
@@ -1,1 +1,10 @@
-<app-home-carousel></app-home-carousel>
+<!--<app-home-header-nav></app-home-header-nav>-->
+<div class="container-fluid p-0 m-0">
+    <app-home-accueil></app-home-accueil>
+  <!--<div class="justify-content-center mr-3 ml3 pr-3 pl-3">
+        <router-outlet></router-outlet>
+      </div>-->
+</div>
+<app-home-footer-top></app-home-footer-top>
+
+
