--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -6,18 +6,30 @@
     <span class="navbar-text text-black">
         <ul class="navbar-nav mr-auto">
           <li id="nav-accueil" class="nav-item pr-3">
-              <button type="button" class="btn btn-light" *ngIf="role !== 'admin'" [routerLinkActive]="['active']" [routerLink]="'home'">Accueil</button>
+              <button type="button" class="btn btn-light" *ngIf="this.user?.roles[0].authority !== 'ADMIN_ROLE'" [routerLinkActive]="['active']" [routerLink]="'home'">Accueil</button>
             <!--<a class="nav-link" [routerLinkActive]="['active']" [routerLink]="'home'">Accueil</a>-->
           </li>
           <li id="nav-location" class="nav-item pr-3">
-              <button type="button" class="btn btn-light" *ngIf="role !== 'admin'" [routerLinkActive]="['active']" [routerLink]="'trouverlocation'">Location</button>
+              <button type="button" class="btn btn-light" *ngIf="this.user?.roles[0].authority !== 'ADMIN_ROLE'" [routerLinkActive]="['active']" [routerLink]="'trouverlocation'">Location</button>
+            <!--<a class="nav-link" [routerLinkActive]="['active']" [routerLink]="'home'">Accueil</a>-->
+          </li>
+          <li id="nav-agences" class="nav-item pr-3">
+              <button type="button" class="btn btn-light" *ngIf="this.user?.roles[0].authority !== 'ADMIN_ROLE'" [routerLinkActive]="['active']" href="#">Nos agences</button>
+            <!--<a class="nav-link" [routerLinkActive]="['active']" [routerLink]="'home'">Accueil</a>-->
+          </li>
+          <li id="nav-formules" class="nav-item pr-3">
+              <button type="button" class="btn btn-light" *ngIf="this.user?.roles[0].authority !== 'ADMIN_ROLE'" [routerLinkActive]="['active']" href="#">Nos formules</button>
+            <!--<a class="nav-link" [routerLinkActive]="['active']" [routerLink]="'home'">Accueil</a>-->
+          </li>
+          <li id="nav-about" class="nav-item pr-3">
+              <button type="button" class="btn btn-light" *ngIf="this.user?.roles[0].authority !== 'ADMIN_ROLE'" [routerLinkActive]="['active']" href="#">A propos</button>
             <!--<a class="nav-link" [routerLinkActive]="['active']" [routerLink]="'home'">Accueil</a>-->
           </li>
         </ul>
-        <div id="nav-welcome" class="float-left pl-4" *ngIf="user && role === 'admin'">
+        <div id="nav-welcome" class="float-left pl-4" *ngIf="this.user?.roles[0].authority == 'ADMIN_ROLE'">
           <div class="card badge badge-secondary">
             <div class="card-header bg-info text-white py-3" style="font-size:14px;">
-              <span>user_name // user las_name // connected as : user_role</span>
+              <span>{{this.user?.firstName}} // {{this.user?.lastName}} // connected as : {{this.user?.roles[0].authority}}</span>
             </div>
           </div>
         </div>
